# Primus-DLRM

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
configs/: bench_onetrans_large_5b.yaml  bench_onetrans_large_5b_cross_feat_shampoo.yaml  bench_onetrans_large_synthetic.yaml  bench_onetrans_v6.yaml  bench_onetrans_v6_synthetic.yaml  bench_onetrans_v7_large.yaml  bench_synthetic_shampoo.yaml  dlrm_baseline.yaml  dlrm_quick.yaml  exp_dlrm_dcnv2.yaml  mi355x_arch.json  nan_repro_synthetic.yaml
configs/hipblaslt_tune/: onetrans_large_5b_all138_full.txt
configs/schemas/: yambda.yaml  (+1 more)
doc/: b200_perf.md  comparison_report.md  design-overall.md  development-stages.md  environment-setup.md  log.md  perf_analysis.md  release_note.md
primus_dlrm/: config.py  schema.py
scripts/: analyze_comms.py  analyze_gemm_trace.py  analyze_trace.py  bench_attn_kernel.py  build_cache.py  download_data.py  eval_checkpoint.py  eval_full.py  eval_mostpop.py  evaluate.py  generate_report.py  launch_slurm.sh  launch_slurm_docker.sh  launch_srun_nvidia.sh  launch_torchrun.sh  preprocess.py  profile_ddp_vs_dmp.py  quick_validate.py  repro_triton_dropout_bug.py  run_comparison.sh  run_distributed.py  run_experiment.py  step_perf_analysis.py  stitch_traces.py  trace_backward.py  train.py  verify_parity.py
tests/: conftest.py  test_config.py  test_cross_features.py  test_dmp_integration.py  test_dmp_minimal.py  test_fbgemm_tbe.py  test_metrics.py  test_model.py  test_native_sharding.py  test_negatives.py  test_wrapper_integration.py
(+29 files in other folders)
